--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,8 +5,11 @@ body {
     background-position: 0 80%;
     background-size: auto 148%;
     background-attachment: fixed;
+
+    cursor: url(../img/cursor.png), auto;
 }
 
+/*改变滚动条样式*/
 html::-webkit-scrollbar {
     width: 10px;
 }
